CHANGES IN FLTK 1.1.3

	- Documentation updates.
	- Fl_Slider didn't call the callback function when the
	  user changed the value using the keyboard and the
	  "when" condition was FL_WHEN_RELEASE. [SF Bug #647072]
	- Lines with less than 2 unique vertices and polygons
	  with less the 3 unique vertices were not drawn
	  properly. [SF Bug #647067]
	- The size_range() values were not honored under MacOS
	  X. [SF Bug #647074]
	- OpenGL windows didn't resize correctly on MacOS X.
          [SF Bug #667855]
	- The menus incorrectly used the overlay visual when one
	  or more menu items contained an image. [SF Bug #653846]
	- Changed some error messages to use Fl::error() instead
	  of fprintf()...
	- Fl_Text_Buffer and Fl_Text_Display used free to free
	  memory that was allocated using the new operator.
	- Tweeked the plastic scheme under MacOSX to better
	  match the colors.
	- The Fl_Image.H always included the x.H header file,
	  which included many system headers that could
	  interfere with normal GUI applications.  It now uses
	  the corresponding based types for the image id and
	  mask to avoid this.
	- The FLUID widget panel wasn't sorted, so keyboard
	  navigation was strange. [SF Bug #647069]
	- Fl_Scroll didn't compute the location of labels to the
	  right or below when determining the area to erase.
	- Added backward-compatibility macro for
	  filename_setext().
	- Fl_Bitmap::copy(), Fl_Pixmap::copy(), and
	  Fl_RGB_Image::copy() all could overflow the source
	  image when scaling the image.
	- Double/triple clicks in Fl_Input fields didn't copy
	  the expanded selection to the clipboard.
	- Fl_Glut_Window and Fl_Gl_Window didn't always initialize
	  the OpenGL context on MacOS.


CHANGES IN FLTK 1.1.2

	- Fl_Menu_Bar now supports drawing vertical dividers
	  between menu items and submenus in the menu bar.
	- Fl_File_Chooser::value() didn't return NULL when the
	  user clicked Cancel while selecting a directory.  This