@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.3
 
 	- Documentation updates.
+	- Fl_Double_Window couldn't be nested on WIN32. [SF Bug
+	  #658219]
 	- Fl_Slider didn't call the callback function when the
 	  user changed the value using the keyboard and the
 	  "when" condition was FL_WHEN_RELEASE. [SF Bug #647072]
